[tool.poetry]
name = "pycon-id-2023"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "pycon"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
pyvis = "^0.3.2"
networkx = {extras = ["default"], version = "^3.2.1"}
notebook = "^7.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
